# genome-shield

./: Anchor.toml  Arcium.toml  README.md  finalize_comp.mjs  upload_circuit.mjs
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  crypto-fix.ts  fs-stub.ts  main.tsx
app/src/idl/: cipher_gate.json  genome_shield.json  shadow_vote.json
artifacts/: circuits_hash.txt
encrypted-ixs/src/: lib.rs
programs/genome_shield/: Cargo.toml
programs/genome_shield/src/: lib.rs
programs/shadow_vote/src/: lib.rs
tests/: shadow_vote.ts
